# dumbpipex

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/: copilot-instructions.md
.github/workflows/: android.yml  ci.yml  release.yml
crates/dumbpipex-cli/: Cargo.toml
crates/dumbpipex-cli/src/: main.rs
crates/dumbpipex-core/: Cargo.toml
crates/dumbpipex-core/src/: lib.rs
docs/: future-work.md  macos-native-feel-audit.md  mobile-gen-regeneration.md  project-audit-2026-06-05.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: ConnectionHome.svelte  DesktopShortcuts.svelte  DisplayPanel.svelte  MenuBar.svelte  MobileSheet.svelte  MobileShortcutBar.svelte  RemotePtyPane.svelte  SearchPanel.svelte  SessionBar.svelte  SessionHeader.svelte  SessionWorkspace.svelte  ToastStack.svelte  remote-pty-types.ts  terminal-ui.ts
src/routes/: +layout.ts  +page.svelte
