[package]
name = "dumbpipex"
version.workspace = true
description = "A Tauri App"
authors = ["you"]
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dumbpipex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
dumbpipex-core = { path = "../crates/dumbpipex-core" }
iroh.workspace = true
tokio.workspace = true
tracing.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
